--- a/jeu-ecologique.html
+++ b/jeu-ecologique.html
@@ -163,9 +163,13 @@
 
     <header>
         <nav>
+            <a href="index.html" class="logo">
+                <img src="ynov.png" alt="Logo Ynov" class="logo-img">
+            </a>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="cours.html">Cours</a></li>
+                <li><a href="fil-actu.html">Fil d'Actualité</a></li>
                 <li><a href="jeu-ecologique.html" class="active">Jeu Écologique</a></li>
             </ul>
         </nav>
