--- a/cours-empreinte-carbone.html
+++ b/cours-empreinte-carbone.html
@@ -235,9 +235,13 @@
 
     <header>
         <nav>
+            <a href="index.html" class="logo">
+                <img src="ynov.png" alt="Logo Ynov" class="logo-img">
+            </a>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="cours.html">Cours</a></li>
+                <li><a href="fil-actu.html">Fil d'Actualité</a></li>
                 <li><a href="jeu-ecologique.html">Jeu Écologique</a></li>
             </ul>
         </nav>
@@ -460,6 +464,10 @@
             </ul>
         </nav>
     </main>
+
+    <div style="text-align: center; margin: 2rem;">
+        <a href="quiz-empreinte-carbone.html" style="display: inline-block; background-color: #2c5282; color: white; text-decoration: none; padding: 1rem 2rem; border-radius: 8px; font-size: 1.2rem; cursor: pointer;">Passer le Quiz</a>
+    </div>
 
     <footer>
         <p>&copy; 2024 Écologie et Énergies Fossiles. Tous droits réservés.</p>
@@ -705,5 +713,6 @@
         showQuestion(0);
     </script>
     <script src="nav.js"></script>
+    <script src="quiz.js"></script>
 </body>
 </html> 
