--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <header>
         <nav>
+            <a href="index.html" class="logo">
+                <img src="ynov.png" alt="Logo Ynov" class="logo-img">
+            </a>
             <ul>
                 <li><a href="index.html" class="active">Accueil</a></li>
                 <li><a href="cours.html">Cours</a></li>
+                <li><a href="fil-actu.html">Fil d'Actualité</a></li>
                 <li><a href="jeu-ecologique.html">Jeu Écologique</a></li>
             </ul>
         </nav>
